# soc-cmm

./: .gitignore  Cargo.toml  README.md  data-2.3.4.toml  flake.nix  scheme-2.3.4.json
.github/workflows/: pages.yml
cmm-compat/: Cargo.toml
cmm-compat/src/: lib.rs  main.rs
cmm-compat/tests/: aspects.rs  extend.rs  guidances.rs
cmm-core/: Cargo.toml
cmm-core/src/: answer.rs  aspect.rs  cid.rs  control.rs  data.rs  lib.rs  main.rs  profile.rs  schema.rs  score.rs
cmm-core/tests/: integration_test.rs
cmm-web/: Cargo.toml  Dioxus.toml  rustfmt.toml  tailwind.css
cmm-web/assets/: scheme-2.3.4.json  site.webmanifest  tailwind.css
cmm-web/assets/scripts/: chart-lib.js  chart.js  highlight-nav.js  scroll.js
cmm-web/src/: layouts.rs  main.rs  utils.rs
cmm-web/src/components/: chart.rs  control.rs  import_export.rs  mod.rs  overview.rs  print_overview.rs  profile.rs  report.rs  score.rs  settings.rs  sidebar.rs  toggle.rs
cmm-web/src/components/ui/: button.rs  domain_icon.rs  mod.rs  print_box.rs  progress_bar.rs  section_title.rs  small_btn.rs  star_btn.rs  toggle.rs  value_or_placeholder.rs
cmm-web/src/pages/: app.rs  mod.rs  report.rs
