[package]
name = "cmm-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
indexmap = { version = "2.9", features = ["serde"] }
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
toml = "0.9"
