[package]
name = "cmm-web"
version = "0.1.0"
authors = ["Srylax <71783705+srylax@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
cmm-core = { path = "../cmm-core" }
dioxus = { version = "0.6.0", features = [] }
strum = "0.27"
toml = "0.8"
indexmap = { version = "2.9", features = ["serde"] }
tracing = "0.1"


[dependencies.web-sys]
version = "0.3"
# We need to enable all the web-sys features we want to use!
features = ["console", "FileSystemFileHandle", "Window"]

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
