[package]
name = "cmm-web"
version = "0.1.0"
authors = ["Srylax <71783705+srylax@users.noreply.github.com>"]
edition = "2024"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cmm-core = { path = "../cmm-core" }
dioxus = { version = "0.7", features = ["router"] }
strum = "0.27"
toml = { version = "0.9", default-features = false, features = ["serde", "display", "parse"] }
indexmap = { version = "2.9", features = ["serde"] }
tracing = "0.1"
dioxus-sdk-storage = { git = "https://github.com/DioxusLabs/sdk.git" } # about 0.1 MB binary size
wasm-bindgen-futures = "0.4.50"
dioxus-free-icons = { version = "0.10", features = ["font-awesome-regular", "font-awesome-solid"]}
mini_markdown = "0.3.5"

[dependencies.web-sys]
version = "0.3"
# We need to enable all the web-sys features we want to use!
features = ["Window", "Navigator", "Clipboard"]

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
